Conversion logic added

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     </div>
                     <div class="input">
                         <select class="currency-select" name="currency-target" id="currencyTarget"></select>
-                        <input type="number" class="exchange-result" disabled id="exchangeResult">
+                        <input type="text" class="exchange-result" disabled id="exchangeResult">
                     </div>
                 </div>
                 <button class="switch-button" id="switchButton">
@@ -47,6 +47,7 @@
                 <h2 class="news-title">Latest News from</h2>
                 <select name="" id="countrySelect" class="country-select"></select>
             </div>
+            <div class="news-container" id="newsContainer"></div>
         </aside>
     </main>
 
